<?xml version="1.0" encoding="utf-8"?>
<!--from net-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <!-- for entering new color"s RGB values -->
    <!-- int only? -->

    <!-- int only? -->

    <!-- int only? -->
    <!-- for setting the selected color to the new value -->

    <Button
        android:id="@+id/buttonColor4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:barrierMargin="0dp"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@+id/buttonColor3"
        app:layout_constraintTop_toBottomOf="@+id/textTheme"
        app:layout_marginBaseline="0dp"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonColor3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:barrierMargin="0dp"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@+id/buttonColor2"
        app:layout_constraintTop_toBottomOf="@+id/textTheme"
        app:layout_marginBaseline="0dp"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonColor2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:barrierMargin="0dp"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintStart_toEndOf="@+id/buttonColor1"
        app:layout_constraintTop_toBottomOf="@+id/textTheme"
        app:layout_marginBaseline="0dp"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonColor1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:barrierMargin="0dp"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@+id/textColor"
        app:layout_constraintTop_toBottomOf="@+id/textTheme"
        app:layout_marginBaseline="0dp"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Setting_English"
        android:textColor="#407c87"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResetColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reset_color"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@+id/buttonNewColor"
        app:layout_constraintTop_toBottomOf="@+id/edittextRed"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <EditText
        android:id="@+id/edittextRed"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="#b5b5b5"
        android:hint="@string/r"
        android:autofillHints="color value"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonColor1" />

    <EditText
        android:id="@+id/edittextGreen"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="#b5b5b5"
        android:hint="@string/g"
        android:autofillHints="color value"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/edittextRed"
        app:layout_constraintTop_toBottomOf="@+id/buttonColor1" />

    <EditText
        android:id="@+id/edittextBlue"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="#b5b5b5"
        android:hint="@string/b"
        android:autofillHints="color value"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/edittextGreen"
        app:layout_constraintTop_toBottomOf="@+id/buttonColor1" />

    <Button
        android:id="@+id/buttonNewColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/set_color"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextRed"
        app:strokeColor="#b5b5b5"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15.75dp"
        android:text="@string/Color_English"
        android:textColor="#407c87"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTheme" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/About_English"
        android:textColor="#407c87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/Language_English"
        android:textColor="#407c87"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewColor" />

    <View
        android:id="@+id/divider3"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLanguage" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/Logout_English"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />

    <Switch
        android:id="@+id/switchPost"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/NewPost_English"
        android:textAlignment="textStart"
        android:textColor="#407c87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNotification"
        tools:checked="false" />

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSchedule" />

    <View
        android:id="@+id/divider4"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogout" />

    <TextView
        android:id="@+id/textNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/Notification_English"
        android:textColor="#407c87"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Switch
        android:id="@+id/switchSchedule"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/ScheduleUpdate_English"
        android:textColor="#407c87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPost" />

    <TextView
        android:id="@+id/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/Theme_English"
        android:textColor="#407c87"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider1"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSetting" />

</androidx.constraintlayout.widget.ConstraintLayout>